mod error handling for bad logins

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
     	
       <h2>Login</h2>
 
-      <br>
+      <p id="error"></p>
       <textarea id="loginEmail" placeholder="email"></textarea>
       <br>
       <textarea id="loginPassword" placeholder="password"></textarea>
